sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: not found: value rg
    rg = i
    ^AlgInsertionSort:8: error: not found: value rg
    while (getValeur(rg+1)<getValeur(rg)) {
                     ^AlgInsertionSort:8: error: not found: value rg
    while (getValeur(rg+1)<getValeur(rg)) {
                                     ^AlgInsertionSort:9: error: not found: value rg
      copie(rg,rg+1)
            ^AlgInsertionSort:9: error: not found: value rg
      copie(rg,rg+1)
               ^AlgInsertionSort:10: error: not found: value rg
      if (rg>0)
          ^AlgInsertionSort:11: error: not found: value rg
        rg-=1
        ^AlgInsertionSort:13: error: not found: value rg
    setValeur(rg,v)  
              ^