sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var len = getNombreValeurs()
  var v = 0
  for (i <- 1 to len-1) {
    rg = i
    v = getValeur(i)
    while (getValeur(rg+1)<getValeur(rg)) {
      copie(rg,rg+1)
      if (rg>0)
      	rg-=1
    }
    setValeur(rg,v)	
	}
}